src/styles/PizzaMenuStyle.css
#PizzaMenu *
{
  position: relative;
  box-sizing: border-box;
}

#PizzaMenu
{
  box-sizing: border-box;
  text-align: left;
  
  font-family:  'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 11pt;
  margin: 0;
  padding: 24px;
  padding-bottom: 0;
  
  
  /* This got the desired effect. don't know why */
  max-width: 50rem; 
  
  display: flex;
  flex-direction: column;
  gap: 0;
  
  align-items: flex-start;
}

#PizzaMenu h1 { font-family: Garamond, serif; font-size: 40pt; font-weight: bold; margin: 0; margin-bottom: 24px;}
#PizzaMenu h2 { font-family: Garamond, serif; font-size: 24pt; font-weight: bold; margin: 12px 0; }
#PizzaMenu h4 { font-size: 11pt; font-weight: normal; scale: 1.15 1; transform-origin: left; text-shadow: 0 0 0 black; }

#PizzaMenu .icon_small
{
  width: 20px;
  height: 20px;
  object-fit: contain;
}

#PizzaMenu .icon_medium
{
  width: 24px;
  height: 24px;
  object-fit: contain;
}

#PizzaMenu .Button
{
  color: white;
  border: 0;
  border-radius: 8px;
  background-color: #e21216;
  padding: 12px 96px;
  margin: 12px 0 24px 0;
  
  text-transform: uppercase;
  font-weight: bold;
  font-size: 12pt;
  transition: 0.3s;
}

#PizzaMenu .Button:hover { box-shadow: 0 4px 6px #00000040;}

/* # Menu List */
/* https://stackoverflow.com/a/19968303 */
/* Hides 5th, to infinity children if the list is collapsed */
#PizzaMenu .PizzaList.collapsed > *:nth-child(n+5)
{
  display: none;
}

#PizzaMenu #information
{
  padding-top: 24px;
}

#PizzaMenu #SeeMore
{
  background: none;
  border: 0;
  color: #266dcc;
  font-size: 11pt;
  
  margin: 24px;
  text-align: center;
  align-self: center;
  
  display: flex;
  flex-direction: row;
}

#PizzaMenu #SeeMore:hover { text-decoration: underline; }

/* # Menu Items */
#PizzaMenu .PizzaMenuItem
{
  min-height: 128px;
  max-height: fit-content;
  
  border-bottom: 1px solid #cfcecc;
  padding-top: 18px;
  padding-bottom: 32px; 
  
  display: flex;
  flex-direction: row;
  gap: 16px;
  transition: 0.3s;
}
#PizzaMenu .PizzaMenuItem:hover { background-color: #f6f6f6;}
#PizzaMenu .PizzaMenuItem * {  margin: 0; padding: 0; }
#PizzaMenu .PizzaMenuItem h4, #PizzaMenu .PizzaMenuItem .Popular {  margin-bottom: 4px; }

#PizzaMenu .PizzaMenuItem > .MenuItemImage 
{
  flex: 2;
  border-radius: 8px;
  background-color: #e21216;
  
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50%;
  
  height: 128px;
  min-width: 128px;
  max-width: 256px;
}

#PizzaMenu .PizzaMenuItem .Popular 
{ 
  color: #e21216;
  border: 1px solid #e21216;
  
  border-radius: 3px; 
  width: fit-content; 
  padding: 2px 4px;

  font-family: Tahoma, sans-serif;
  font-size: 7pt;
  letter-spacing: 1pt;
  text-transform: uppercase;

  scale: 1.1 1;
  transform-origin: left;
}

#PizzaMenu .PizzaMenuItem > .MenuItemText { flex: 3; }
#PizzaMenu .PizzaMenuItem > .MenuItemText > *
{
  line-height: 1.5;
}

#PizzaMenu .PizzaMenuItem .vegPizzaIcon
{
  float: right;
}

#PizzaMenu .PizzaMenuItem > .MenuItemIcons 
{ 
  display: flex;
  flex-direction: column;
  margin-bottom: -24px;

  justify-content: end;
}

#PizzaMenu .PizzaMenuItem > .MenuItemIcons .infoIcon
{
  position: absolute;
  box-sizing: content-box;
  
  background-color: white;
  border-radius: 50%;
  padding: 8px;
  
  top: -8px;
  right: -8px;
  
  transition: 0.3s;
}

#PizzaMenu .PizzaMenuItem > .MenuItemIcons .infoIcon:hover
{
  filter: contrast(90%) opacity(80%);
}

